# ByteBloom

./: AGENTS.md  Biomes_PRD.md  Cargo.toml  Disease_Pests_PRD.md  Economy_PRD.md  Genetics_PRD.md  README.md
plant_genetics/: Cargo.toml
plant_genetics/src/: main.rs
src/: cli.rs  economy.rs  engine.rs  events.rs  garden.rs  main.rs  pests.rs  plant.rs  plant_definitions.rs  saveload.rs  tests.rs  tui.rs  weather.rs
