[package]
name = "bytebloom_gardens"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.25"
once_cell = "1.21.3"
rand = "0.8.5"
ratatui = { version = "0.21", features = ["all-widgets"] }
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
